Sutter Health/src/objects/PHI_PCI_Data__c.object
<CustomObject>
    <fields>
        <fullName>CC_SSN_Number__c</fullName>
        <label>PHI_PCI Data</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_ID__c</fullName>
        <label>Customer Inquiry</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Inquiry_Comment__c</fullName>
        <label>Customer Inquiry/Comment?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Inquiry_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; Case_Record_ID__c</formula>
        <label>Customer Inquiry Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is being used to keep a track of which record has been processed for PHI Data</description>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <label>PHI_PCI Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CC_SSN_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Case_Number__c</columns>
        <columns>Completed__c</columns>
        <columns>Case_Record_ID__c</columns>
        <columns>Customer_Inquiry_Comment__c</columns>
        <columns>Customer_Inquiry_Link__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>S3</fullName>
        <columns>NAME</columns>
        <columns>Case_Number__c</columns>
        <columns>Customer_Inquiry_Link__c</columns>
        <columns>Customer_Inquiry_Comment__c</columns>
        <columns>CC_SSN_Number__c</columns>
        <columns>Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PHI_PCI_Data__c.S3</value>
        </filters>
        <filters>
            <field>Completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>S3</label>
    </listViews>
    <listViews>
        <fullName>SHP</fullName>
        <columns>NAME</columns>
        <columns>Case_Number__c</columns>
        <columns>Customer_Inquiry_Link__c</columns>
        <columns>Customer_Inquiry_Comment__c</columns>
        <columns>CC_SSN_Number__c</columns>
        <columns>Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PHI_PCI_Data__c.SHP</value>
        </filters>
        <filters>
            <field>Completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>SHP</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PHI_PCI Data</pluralLabel>
    <recordTypes>
        <fullName>S3</fullName>
        <active>true</active>
        <label>S3</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP</fullName>
        <active>true</active>
        <label>SHP</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>